fixed the anchor wraps, eliminated unnecessary css and tweaked some of the text in the footer and team description

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 body {
     font-family: "Luxurious Roman", serif;
     font-size: 1.375rem;
-    line-height: 1.2;
+    line-height: 1.6;
     color: hsla(0, 0%, 90%, 1);
     background-color: hsla(266, 100%, 25%, 1);
 }
@@ -46,7 +46,7 @@ header h1 {
 }
 
 .logo img:hover {
-  transform: translateY(-4px); 
+    transform: translateY(-4px); 
 }
 
 /* Navigation */
@@ -96,48 +96,37 @@ nav a:hover {
     flex-wrap: wrap;
     display: inline-flex;
     margin: 0.625rem;
-    max-height: auto;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .card:hover {
-  transform: translateY(-4px);
-  box-shadow: 10px 10px 20px hsla(0, 0%, 0%, 0.85);
+    transform: translateY(-4px);
+    box-shadow: 10px 10px 20px hsla(0, 0%, 0%, 0.85);
 }   
 
 .card-body {
     padding: 1.563rem;
-    text-align: center;
     margin: 0.625rem;
     background-color: hsla(0, 0%, 0%, 0.75);
     border-radius: 0.75rem;
-    max-width: 25rem;
-    max-height: min-content;
 }
 
 .card-body p {
     margin-top: 1.6rem;
 }
 
-.card-body a, header a {
+.card a {
     text-decoration: none;
     color: hsla(0, 0%, 90%, 1);
 }
 
-#products h2, #team h3, #acrylics h2 {
+.section h2, .section h3, .team-description {
     margin-bottom: 1.875rem;
-    text-transform: uppercase;
 }
 
-#products, #team, #acrylics {
+.section {
     margin-bottom: 12.5rem;
     scroll-margin-top: 9.375rem;
-}
-
-.team-description {
-    margin-bottom: 1.875rem;
-    line-height: 1.6;
-    
 }
 
 /* Footer Section*/
